# NOS-bare-metal

./: .gitignore  CMakeLists.txt  README.md
arch/: Dockerfile  GEMINI.md  README.md  build.sh  docker-compose.yml
arch/rootfs/etc/: os-release
arch/rootfs/etc/nos/: nos.conf
arch/rootfs/etc/profile.d/: nos.sh
arch/rootfs/etc/skel/: .nosrc
arch/rootfs/usr/lib/nos/: __init__.py  neural_shell.py  system.py  test_all.py
arch/rootfs/usr/lib/nos/cache/: __init__.py  predictive_cache.py
arch/rootfs/usr/lib/nos/compressor/: __init__.py  neural_compressor.py
arch/rootfs/usr/lib/nos/diagnostics/: __init__.py  conversational_diagnostics.py
arch/rootfs/usr/lib/nos/kernel/: __init__.py  nn_core.py
arch/rootfs/usr/lib/nos/pkg_manager/: __init__.py  neural_pkg_manager.py
arch/rootfs/usr/lib/nos/services/: __init__.py  ai_services.py
arch/rootfs/usr/lib/systemd/system/: nos-anomaly.service  nos-resource-monitor.service  nos-trainer.service  nos.target
arch/x86_64/: Makefile  arch.cpp  arch.h  boot.asm  console.cpp  console.h  gdt.cpp  idt.cpp  interrupts.asm  kernel.cpp  kernel.h  linker.ld  memory.cpp  memory.h  paging.cpp
include/: console.h  filesystem.h  kernel.h  memory.h  neural_core.h  scheduler.h  shell.h
kernel/: consensus.cpp  console.cpp  federated.cpp  filesystem.cpp  kernel.cpp  main.cpp  memory.cpp  network.cpp  neural_core.cpp  scheduler.cpp  services.cpp  shell.cpp  shell_simple.cpp  stubs.cpp  syscalls.cpp
